<resources>
    <string name="app_name">南拓</string>
    <string name="app_title">南拓</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Unknown exception</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="up">向上滑</string>
    <string name="down">向下滑</string>
    <string name="left">向左滑</string>
    <string name="right">向右滑</string>
    <string name="ups">向上滑动</string>
    <string name="tracing_desc">室内、外高精度连续追踪</string>
    <string name="track_query_desc">查询被追踪者的历史轨迹</string>
    <string name="fence_desc">本地、云端围栏双重监控</string>
    <string name="bos_desc">上传、下载图片，生成水印图片</string>
    <string name="cache_manage_desc">查询、删除缓存的轨迹信息</string>
    <string name="faq_desc">状态码及问题反馈渠道说明</string>
    <string name="font_type">微软雅黑</string>
    <string name="demo_name_poi">周边服务</string>
    <string name="demo_name_route">路线选择</string>
    <string name="tracing_title">鹰眼足迹</string>
    <string name="tracing_options_title">鹰眼足迹设置</string>
    <string name="track_query_options_title">鹰眼足迹查询设置</string>
    <string name="start_trace">开启服务</string>
    <string name="stop_trace">停止服务</string>
    <string name="start_gather">开启采集</string>
    <string name="stop_gather">停止采集</string>
    <string name="speeding">超 速</string>
    <string name="harsh_breaking">急刹车</string>
    <string name="harsh_accel">急变速</string>
    <string name="harsh_steering">急转弯</string>
    <string name="stay_point">停留点</string>
    <string name="loc_time">定位时间</string>
    <string name="actual_speed">实际行驶速度：</string>
    <string name="limit_speed">限定最高时速：</string>
    <string name="acceleration">实际加速度：</string>
    <string name="initial_speed_1">加速前时速：</string>
    <string name="end_speed_1">加速后时速：</string>
    <string name="initial_speed_2">刹车前时速：</string>
    <string name="end_speed_2">刹车后时速：</string>
    <string name="centripetal_acceleration">向心加速度：</string>
    <string name="turn_type">转向类型：</string>
    <string name="turn_speed">转向时速：</string>
    <string name="stay_start_time">开始时间：</string>
    <string name="stay_end_time">结束时间：</string>
    <string name="stay_duration">停留时长：</string>
    <string name="tracing_option_interval">采集、打包频率(单位:秒):</string>
    <string name="tracing_option_location_mode">定位模式:</string>
    <string name="tracing_option_object_save">对象存储:</string>
    <string name="high_accuracy">高精度定位模式，GPS与网络综合定位</string>
    <string name="battery_saving">低功耗定位模式，仅使用网络定位</string>
    <string name="device_sensors">仅使用设备(GPS)定位</string>
    <string name="close_bos">关闭</string>
    <string name="open_bos">开启</string>
    <string name="gather_interval">采集频率:</string>
    <string name="pack_interval">打包频率:</string>
    <string name="gather_interval_hint">5</string>
    <string name="pack_interval_hint">30</string>
    <string name="track_query_option_time">起止时间:</string>
    <string name="track_query_option_process">纠偏与数据分析:</string>
    <string name="track_query_option_radius_threshold">精度过滤(单位:米):</string>
    <string name="track_query_option_transport_mode">交通方式:</string>
    <string name="track_query_option_sort_type">排序规则:</string>
    <string name="start_time">开始：</string>
    <string name="end_time">结束：</string>
    <string name="radius_value">过滤值：</string>
    <string name="radius_hint">0</string>
    <string name="processed">纠偏</string>
    <string name="denoise">去噪</string>
    <string name="vacuate">抽稀</string>
    <string name="mapmatch">绑路</string>
    <string name="driving_mode">驾车</string>
    <string name="riding_mode">骑行</string>
    <string name="walking_mode">步行</string>
    <string name="asc">升序</string>
    <string name="desc">降序</string>
    <string name="all_supplement_model">里程补偿方式:</string>
    <string name="all_coord_type">坐标类型:</string>
    <string name="all_cancel">取消</string>
    <string name="all_sure">确定</string>
    <string name="ture_choose">确定选择吗?</string>
    <string name="no_supplement">不补充</string>
    <string name="straight">直线距离</string>
    <string name="driving">最短驾车路线</string>
    <string name="riding">最短骑行路线</string>
    <string name="walking">最短步行路线</string>
    <string name="bd09ll">百度经纬度坐标</string>
    <string name="gcj02">国测局加密坐标</string>
    <string name="trace_control_title">追踪控制</string>
    <string name="track_analysis_title">轨迹分析</string>
    <string name="track_analysis_speeding_title">超速详情</string>
    <string name="track_analysis_breaking_title">急刹车详情</string>
    <string name="track_analysis_accel_title">急变速详情</string>
    <string name="track_analysis_steering_title">急转弯详情</string>
    <string name="track_analysis_stay_title">停留点详情</string>
    <string name="fence_setting_title">围栏设置</string>
    <string name="fence_create_local_circle">创建本地圆形围栏</string>
    <string name="fence_create_server_circle">创建服务端圆形围栏</string>
    <string name="fence_create_polyline">创建多段线围栏</string>
    <string name="fence_create_polygon">创建多边形围栏</string>
    <string name="no_track_data">未查询到轨迹</string>
    <string name="track_query_title">轨迹查询</string>
    <string name="choose">因权限问题,应先注册后登陆方可使用,谢谢!</string>
    <string name="ok">好的</string>
    <string name="no">不了</string>
    <string name="username">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="usernameS">请输入用户名</string>
    <string name="passwords">请输入密码</string>
    <string name="passwordSs">请再次输入密码</string>
    <string name="read">我已阅读并同意服务条款</string>
    <string name="registerEs">注册</string>
    <string name="id">请输入对方账号</string>
    <string name="mess">请输入发送内容</string>
    <string name="lian">您的连接已断开</string>
    <string name="returns">切换账号或重新登陆</string>
    <string name="send">发送</string>
    <string name="good">请输入好友帐号/ID</string>
    <string name="reason">添加理由</string>
    <string name="findAdd">查找 并 添加</string>
    <string name="groupQun">群名称 :</string>
    <string name="zi">2~10个汉字或字母</string>
    <string name="create">创建</string>
    <string name="sid">输入ID</string>
    <string name="find">邀请</string>
    <string name="member">群成员</string>
    <string name="route_choose">路线选择</string>
    <string name="ar_nav">AR导航</string>
    <string name="around">周边服务</string>
    <string name="eagle">我的足迹</string>
    <string name="voice">语音导航</string>
    <string name="offline">离线下载</string>
    <string name="chat">My聊天室</string>
    <string name="tel">客服</string>
    <string name="map_choose_dialog">功能选择</string>
    <string name="video">视频详情</string>
    <string name="tv_up">起点</string>
    <string name="at_navi">当前位置</string>
    <string name="tv_end">终点</string>
    <string name="start_navi">开始导航</string>
    <string name="myOfflin">下载离线地图</string>
    <string name="city">北京</string>
    <string name="search">搜索</string>
    <string name="state">已下载:--</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="del">删除</string>
    <string name="city_list">城市列表</string>
    <string name="local">下载管理</string>
    <string name="hot_city">热门城市</string>
    <string name="guo">全国</string>
    <string name="download">已下载城市</string>
    <string name="searchkey">如：餐厅</string>
    <string name="searchNearby">周边搜索</string>
    <string name="picture">图片</string>
    <string name="videos">视频</string>
    <string name="photo">摄像</string>
    <string name="biao">表情</string>
    <string name="tv_upes">起点</string>
    <string name="intoup">输入起点</string>
    <string name="intoend">输入终点</string>
    <string name="drive">驾车</string>
    <string name="transit">公交</string>
    <string name="walk">步行</string>
    <string name="bike">骑行</string>
    <string name="message">消息</string>
    <string name="linkman">联系人</string>
    <string name="set">设置</string>
    <string name="trace">轨迹时时追踪</string>
    <string name="query">历史轨迹查询</string>
    <string name="drawmap">请点击选择所需路线，在地图中绘制</string>
    <string name="province">省</string>
    <string name="cities">市</string>
    <string name="cancel">取消</string>
    <string name="tures">确定</string>
    <string name="citys">城　市:</string>
    <string name="key">关键词:</string>
    <string name="new_friend">新朋友</string>
    <string name="group">群聊</string>
    <string name="delies">删除</string>
    <string name="loadings">已下载城市</string>
    <string name="look">查看</string>
    <string name="remove">删除</string>
    <string name="search_location">搜索地点</string>
    <string name="no_wifi">当前无网络</string>
    <string name="no_result">未找到结果</string>
    <string name="result">找到结果</string>
    <string name="sorry_result">抱歉，未找到结果</string>
    <string name="sorry_wifi">网络不可用</string>
    <string name="sorry_user">用户名不能为空</string>
    <string name="sorry_password">密码不能为空</string>
    <string name="and_false">登陆失败,密码或账号错误</string>
    <string name="open_map">开启个性化地图</string>
    <string name="close_map">关闭个性化地图</string>
    <string name="open_loading_map">开始下载离线地图. cityid: </string>
    <string name="close_loading_map">暂停下载离线地图. cityid: </string>
    <string name="del_loading_map">删除离线地图. cityid: </string>
    <string name="up_date">可更新</string>
    <string name="new_date">最新</string>
    <string name="info_tures">确认信息无误</string>
    <string name="fou">否</string>
    <string name="is">是</string>
    <string name="success_register">注册成功</string>
    <string name="no_user">账号不能为空</string>
    <string name="no_pass">密码不能为空</string>
    <string name="no_up">密码输入不一致</string>
    <string name="short_user">用户名太短</string>
    <string name="length_pass">注意密码长度</string>
    <string name="length">账号长度不能小于5位</string>
    <string name="prompt">提示</string>
    <string name="turen">确认</string>
    <string name="retrieval">检索地址有歧义，请重新设置。
可通过getSuggestAddrInfo()接口获得建议查询信息</string>
    <string name="input_end">请输入终点</string>
    <string name="position">我的位置</string>
    <string name="null_user">用户名为空</string>
    <string name="del_friend">是否删除好友</string>
    <string name="success_creat">创建成功!</string>
    <string name="false_creat">创建失败!</string>
    <string name="dissolution">群组解散成功</string>
    <string name="not_yet_open">暂未开放</string>
    <string name="remove_user">帐号已经被移除</string>
    <string name="no_login_user">帐号在其他设备登录</string>
    <string name="not_service">连接不到聊天服务器</string>
    <string name="not_wifi">当前网络不可用，请检查网络设置</string>
    <string name="enorr_key">key 验证出错! 错误码 :</string>
    <string name="p_key"> ; 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="success_key">key 验证成功! 功能可以正常使用</string>
    <string name="wifi_e">网络出错</string>
    <string name="ordinary">普通</string>
    <string name="follow">跟随</string>
    <string name="compass">罗盘</string>
    <string name="noresult">没有搜索到结果</string>
    <string name="mani_key">请在AndoridManifest.xml中输入正确的授权Key,并检查您的网络连接是否正常！error: </string>
    <string name="c_key">key认证成功</string>
    <string name="sj">数据已更新哦!</string>
    <string name="cm">发送消息成功！</string>
    <string name="fm">发送消息失败！</string>
    <string name="lx">路线</string>
    <string name="xl">线路</string>
    <string name="dy">大约需要：</string>
    <string name="jl">距离大约是：</string>
    <string name="fen">分钟</string>
</resources>