<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.nantuoappdemo.activity.social.SocialActivity">

    <TextView
        android:id="@+id/tv_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lian"
        android:textColor="#66ccff"
        android:textSize="20dp"
        android:visibility="gone" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="24">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/ll_lineL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tv_linkman"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/linkman"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tv_set"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set"
            android:textSize="30dp" />
    </LinearLayout>
</LinearLayout>
