<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.nantuoappdemo.activity.social.AddFriendActivity">

    <EditText
        android:id="@+id/et_hao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/good"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reason"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findAdd" />

    <View
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="10dp" />

    <ListView
        android:id="@+id/lv_addLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />
</LinearLayout>
